--- a/index.html
+++ b/index.html
@@ -105,11 +105,32 @@
           Hodor. Hodor, hodor, hodor. Hodor hodor... Hodor hodor hodor?! Hodor, hodor... Hodor hodor HODOR hodor, hodor hodor. Hodor.
           </p>
 
-        <p>Hodor, hodor. Hodor. Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor, hodor, hodor hodor. Hodor! Hodor hodor, hodor;
-          hodor hodor hodor? Hodor, hodor. Hodor. Hodor, hodor - HODOR hodor, hodor hodor hodor! Hodor, hodor. Hodor. Hodor, HODOR
-          hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
-          hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
+        <span class='readButton'></span>
+      </div>
+      <div class="article">
+          <h2>SQL vs NoSQL</h2>
+          <p class="date">December 5, 2018</p>
+
+          <p>Dagobah hutt jawa leia calamari ventress skywalker yoda. Binks wicket hutt coruscant sidious
+            naboo ackbar tatooine.</p>
+
+          <p>VDagobah hutt jawa leia calamari ventress skywalker yoda. Binks wicket hutt coruscant sidious
+            naboo ackbar tatooine.</p>
+          <span class='expandButton'></span>
+          <span class='readButton'></span>
+      </div>
+      <div class="article">
+          <h2>Is Lambda School the best online coding bootcamp?</h2>
+          <p class="date">December 5, 2018</p>
+
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores assumenda quia soluta nobis? Eaque fugiat, obcaecati aspernatur accusantium tenetur quia numquam neque facere voluptatem unde inventore sapiente nihil recusandae eius totam ipsam maiores illum molestias vitae expedita ratione, deserunt ab aliquid. Quod illo est rerum cum mollitia perferendis debitis quasi.</p>
+
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia officiis deserunt sequi rem dignissimos praesentium, nobis magnam temporibus consectetur recusandae atque porro quo distinctio repellendus. Qui fugit distinctio minima voluptatem obcaecati necessitatibus quia neque vitae dolor exercitationem quaerat, nostrum dolorum id quas officia. Hic aliquam, quo magni eveniet distinctio vero officia libero vitae doloribus, sequi corporis animi, cupiditate accusantium in blanditiis est minima eius rerum non fugit numquam molestias repellendus consequatur. Exercitationem porro aspernatur iste.</p>
+
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ea voluptas ipsa vero culpa, incidunt illum cupiditate molestiae accusamus odio aperiam pariatur in? Dignissimos nostrum dolore vero ex possimus quae, necessitatibus tempore asperiores, velit repudiandae laudantium dolorem, provident labore culpa debitis minima et nesciunt nihil. Dolore ducimus voluptatibus laborum nesciunt.</p>
+          <span class='expandButton'></span>
+          <span class='readButton'></span>
       </div>
     </div>
   </body>
