Got the TweenMax animation workig on my toggleMenu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Lambda School Newsfeed</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./CSS/index.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
     <script src="./Menu/Menu.js" async></script>
     <script src="./Article/Article.js" async></script>
   </head>
@@ -110,7 +111,7 @@
       </div>
       <div class="article">
           <h2>SQL vs NoSQL</h2>
-          <p class="date">December 5, 2018</p>
+          <p class="date">January 5, 2019</p>
 
           <p>Dagobah hutt jawa leia calamari ventress skywalker yoda. Binks wicket hutt coruscant sidious
             naboo ackbar tatooine.</p>
@@ -121,8 +122,9 @@
           <span class='readButton'></span>
       </div>
       <div class="article">
+          <button class="remove">X</button> 
           <h2>Is Lambda School the best online coding bootcamp?</h2>
-          <p class="date">December 5, 2018</p>
+          <p class="date">January 30, 2019</p>
 
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores assumenda quia soluta nobis? Eaque fugiat, obcaecati aspernatur accusantium tenetur quia numquam neque facere voluptatem unde inventore sapiente nihil recusandae eius totam ipsam maiores illum molestias vitae expedita ratione, deserunt ab aliquid. Quod illo est rerum cum mollitia perferendis debitis quasi.</p>
 
